--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   gtag('config', 'UA-124803057-1');
 </script>
 
-		<title>Reese Pearsall</title>
+		<title>Logan Pappas</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -30,8 +30,8 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#">Reese Pearsall</a></h1>
-					<p>Computer Science Graduate Student <br />
+					<h1 id="logo"><a href="#">Logan Pappas</a></h1>
+					<p>Computer Science Graduate <br />
 					Montana State University <br />
 					Bozeman, Montana</p>
 				</header>
