--- a/index.html
+++ b/index.html
@@ -39,17 +39,15 @@
 					<ul>
 						<li><a href="#about" class="active">About Me</a></li>
 						<li><a href="#experience">Experience</a></li>
-						<li><a href="#teaching">Teaching</a></li>
 						<li><a href="#research">Research Interests</a></li>
 						<li><a href="#contact">Contact</a></li>
 					</ul>
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="https://www.youtube.com/channel/UCZXm2QoAmyGYpGIWQuClhuA" class="fab fa-youtube"><span class="label"></span></a></li>
-						<li><a href="https://www.linkedin.com/in/reese-pearsall-662084126/" class="fab fa-linkedin-in"><span class="label"></span></a></li>
-						<li><a href="https://github.com/reesep" class="fab fa-github"><span class="label"></span></a></li>
-						<li><a href="mailto:reesepearsallcs@gmail.com" class="fas fa-envelope-square"><span class="label"></span></a></li>
+						<li><a href="https://www.linkedin.com/in/logan-pappas-9a674a171/" class="fab fa-linkedin-in"><span class="label"></span></a></li>
+						<li><a href="https://github.com/lpappas98" class="fab fa-github"><span class="label"></span></a></li>
+						<li><a href="mailto:lpappas98@yahoo.com" class="fas fa-envelope-square"><span class="label"></span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -66,23 +64,16 @@
 									<header class="major">
 										<h3>About Me</h3>
 									</header>
-									<p>Hello! My name is Reese Pearsall. I am a computer science graduate student at Montana State University. I am advised by <a href = "https://www.traviswpeters.com"> Dr. Travis Peters </a>. I received  my B.S. in Computer Science from Montana State university in Summer 2020 with a minor in Sociology.
-									 To see my (academic) areas of interest, please see my <a href = "https://reesep.github.io/#research"> Research Interests </a> section. I will be updating this website often to keep up-to-date with all the cool things I am doing!  </p>
+									<p>Hello! My name is Logan Pappas. I am a recent computer science graduate at Montana State University. I received  my B.S. in Computer Science from Montana State university in Summer 2020.
+									 </p>
 
 									<br>
-									<p> My resume can be found <a href = "files/resume.pdf"> here </a> (Last updated: December 2019)</p>
+									<p> My resume can be found <a href = "files/resume.pdf"> here </a> (Last updated: July 2020)</p>
 
-
-									<p>
-									<!--I was raised in Billings, Montana for most of my life. My father was very drawn to computers when I was growing up and because of this, my family always had a couple of Windows XP computers in the house when I was growing up. This was my first real exposure to computers and is what
-									sparked my interests in computers and caused me to enroll in computer science classes in high school. To continue pursuing my interest in computers and programming, I went to Montana State University to start a degree in Computer Science during the fall semester of 2016. -->
-									</p>
 
 									<br>
 									<p>
-									Despite living in Montana for most of my life, I am not much of an outdoorsman or skier (shocker, I know). Outside of school, I enjoy spending time with my friends and family. I am a huge fantasy football nerd
-									and die-hard fan of the New England Patriots. I was involved in several local orchestras as a double bass player in high school, and I am still interested in music performance and playing the double bass! When I have time, I enjoy playing video games with my pals. For several years, I was the Program Director of one of the largest
-									online educational programs to help people improve in one of my favorite video games, League of Legends.
+
 									</p>
 
 
@@ -100,28 +91,7 @@
 
 									<div class="features">
 
-										<article>
-											<a class="image"><img src="images/hoplite.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>Hoplite Industries</h4>
-												<p>
-												At the beginning of June 2020, I started working as a software engineer for Hoplite Industries, a cyber risk solutions company in Bozeman, Montana. As a software engineer,
-												I develop various tools to deliver cutting-edge cyber security solutions for computer, cloud, and network systems.
-												</p>
-											</div>
-										</article>
 
-
-										<article>
-											<a class="image"><img src="images/airforce.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>Air Force</h4>
-												<p>
-												In the Summer of 2019, I had the privilege  to work as an intern for the Air Force. I spent 12 weeks as a <a href = "https://www.afciviliancareers.com/student-roa/" > PCIP Intern  </a> working on Hill Force Base in Utah. I spent most of the summer working with a DevOps
-												development team creating an updated and modernized calibration software that tests the working condition of a (unclassified) mobile ground radar system. This opportunity gave me knowledge and hands-on experience with software development  lifecycles, software engineering and software testing
-												</p>
-											</div>
-										</article>
 										<article>
 											<a class="image"><img src="images/techlink.jpg" alt="" /></a>
 											<div class="inner">
@@ -135,98 +105,9 @@
 												<p> To learn more about TSEAL, <a href = "https://www.youtube.com/watch?v=V9xHN1psxn4&feature=youtu.be" > check out this video! </a> </p>
 											</div>
 										</article>
-										<article>
-											<a class="image"><img src="images/python.png" alt="" /></a>
-											<div class="inner">
-												<h4>Teaching Assistant and Smarty Cats Tutor</h4>
-												<p>I have had the opportunity  to be a teaching assistant for the lower division Python classes for four semesters now. Starting in Fall of 2020, I will be transitioning to a Graduate Teaching Assistant, where I will be assisting  upper-division computer science courses.
-												  My duties include grading assignments, holding a weekly lab section holding, hosting office hours, and helping students understand the topics taught in lecture.
-												</p>
-
-
-											</div>
-
-
-
-
-										</article>
 									</div>
 								</div>
 							</section>
-
-						<!-- Three -->
-							<section id="teaching">
-								<div class="container">
-									<h3>Teaching</h3>
-									<p>I am very passionate about teaching computer science to students of all diverse backgrounds. I have been a teaching assistant at Montana State University for over two years and I am having an absolute blast being one. I view being a teaching assistant as a privilege. I always strive to go above and beyond to help and give my students the tools and resources they need to succeed. It is always my goal to push my students to become great problem solvers and
-												cultivate excitement around some of the most fascinating ideas and core concepts in programming and computer science. I care very much about my students and their education. I make a great effort to support each and every student along the way, no matter their background. I've found that students have a much larger impact on us than we give them credit for. I have become a better teacher, communicator, and programmer after each semester working with students. Being a teaching assistant has shown me that I have a passion for
-												teaching and helping others. <b> It is my goal to teach computer science at a college level after graduate school. </b> </p>
-									<h4>Fall 2020</h4>
-									<p>
-									<ul>
-										<li> <a href ="https://www.traviswpeters.com/cs460-2020-fall/"> [TA] CSCI 460 - Operating Systems </a>	</li>
-									</ul></p>
-
-									<h4> Past Courses </h4>
-									<p>
-									<ul>
-
-										<li> <strike><a href="https://www.cs.montana.edu/paxton/classes/2020/">[TA] CSCI 491 - Programming in Go (Study abroad course in Berlin, Germany)</strike></a>
-										<ul style="list-style-type:square;">
-											<li> <a href = "https://www.cs.montana.edu/paxton/classes/2020/lectures/concurrency.html"> Guest Lecture: Concurrency in Go </a> </li>
-										</ul>
-
-
-										<li> <a href ="https://www.cs.montana.edu/paxton/classes/spring-2020/csci107/">Spring 2020: [TA] CSCI 107: The Joy and Beauty of Computing</a> </li>
-											<ul style="list-style-type:square;">
-												<li> <a href = "https://youtu.be/NPn8LqXoS3A"> Guest Lecture: Python Functions (February 21, 2020) </a> </li>
-											</ul>
-
-										<li> <a href ="https://www.cs.montana.edu/paxton/classes/csci127/">Fall 2019: [TA] CSCI 127 - Joy and Beauty of Data</a> </li>
-											<ul style="list-style-type:square;">
-												<li> <a href = " https://www.youtube.com/watch?v=NPzFK04siyc&t=2494s"> Guest Lecture: Python for loops and while loops (September 11, 2019) </a> </li>
-												<li> <a href = "https://www.youtube.com/watch?v=VwZ6l5yiOKk"> Guest Lecture: Python matplotlib Library (November 15, 2019) </a> </li>
-												<li> <a href = "https://youtu.be/CrHhKpNuo6M">Guest Lecture: Python pandas Library (December 2, 2019) </a> </li>
-											</ul>
-
-
-										<li> <a href="https://www.cs.montana.edu/paxton/classes/spring-2019/csci127/">Spring 2019: [TA] CSCI 127- Joy and Beauty of Data</a></li>
-										<ul style="list-style-type:square;">
-												<li> <a href = "https://www.youtube.com/watch?v=dQTP19mKleg"> Guest Lecture: Inheritance (March 11, 2019) </a> </li>
-
-											</ul>
-										<li> Fall 2018: [TA] CSCI 127- Joy and Beauty of Data </li>
-										<ul style="list-style-type:square;">
-												<li> Guest Lecture: Python Dictionaries (October 22, 2018) </li>
-
-											</ul>
-									</ul></p>
-
-								</div>
-							</section>
-
-
-						<!-- Four -->
-							<section id="research">
-								<div class="container">
-									<h3>Research Interests</h3>
-
-									<ul>
-									 <li> Cybercrime </li>
-									 <li> Crybersecurity</li>
-									 <li> Cyberlaw and policy</li>
-									 <li> Malaware</li>
-									</ul>
-
-
-									<div class="insets">
-										<article>
-											<a class="image"><img src="images/cyber.png" alt="" /></a>
-										</article>
-									</div>
-								</div>
-							</section>
-
 
 
 						<!-- Five -->
@@ -234,7 +115,7 @@
 								<div class="container">
 									<h3>Contact Me</h3>
 									<p>Best way to contact me is to shoot me an email!<br />
-									Email: reesepearsallcs@gmail.com
+									Email: Lpappas98@yahoo.com
 									</p>
 								</div>
 							</section>
