--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 										</article>
 
                     <article>
-                      <a class="image"><img src="images/verizon.jpg" alt="" /></a>
+                      <a class="image"><img src="images/verizon.png" alt="" /></a>
                       <div class="inner">
                         <h4>Verizon</h4>
                         <p>
@@ -118,7 +118,24 @@
                         </p>
 
                         <br>
-                        
+
+                      </div>
+                    </article>
+
+                    <article>
+                      <a class="image"><img src="images/simplymac.png" alt="" /></a>
+                      <div class="inner">
+                        <h4>Simply Mac</h4>
+                        <p>
+                        During my freshman year of college I decided to continue my past experience in sales in sales from Best Buy and get a job at Simply Mac, a premiere apple partner that provides customers with service and sales of all Apple products.
+                        Ever since I was a little kid I always loved Apple products since I recieved an Ipod Video from my parents as a birthday present. Combining this love of Apple products with sales and customer service experience this was the perfect college job for me.
+                        While I worked at simply mac I was the leading sales rep for our store even though I had only a few months experience. My third month working at Simply Mac I not only exceeded my sales goals but was rated the fifth best sales rep for the month of December nationwide.
+                        Due to my success in sales and service that month I won a brand new Macbook Pro! After many weeks of training I also recieved Apples certification for servicing all of their mobile devices at the time, this certification was called ACIT.
+                        For the rest of my time at Simply Mac I lead my store in sales, assisted customers daily with their service needs making sure they not only get their problems solved but learn new skills with thier Apple products so they can solve their own future issues, and also helped train and lead my store since we were without a manager for multiple months.
+                        </p>
+
+                        <br>
+
                       </div>
                     </article>
 
