fix resume link

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 									 </p>
 
 									<br>
-									<p> My resume can be found <a href = "files/resume.pdf"> here </a> (Last updated: July 2020)</p>
+									<p> My resume can be found <a href = "files/Resume.pdf"> here </a> (Last updated: July 2020)</p>
 
 
 									<br>
