egen project added in

--- a/index.html
+++ b/index.html
@@ -143,6 +143,19 @@
 								</div>
 							</section>
 
+              <!-- Three -->
+  							<section id="Projects">
+  								<div class="container">
+  									<h3>Projects</h3>
+  									<h4>School Projects</h4>
+                    <p>Egen RC car controlled using Swift Bluetooth App</p>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/1-LXaLg0wQo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <br>
+                    <h4>Personal Projects</h4>
+  								</div>
+  							</section>
+
+
 
 						<!-- Four -->
 							<section id="contact">
@@ -153,7 +166,7 @@
 									</p>
 								</div>
 							</section>
-					</div>
+
 
 				<!-- Footer -->
 					<section id="footer">
