--- a/index.html
+++ b/index.html
@@ -148,9 +148,13 @@
   								<div class="container">
   									<h3>Projects</h3>
   									<h4>School Projects</h4>
-                    <p>Egen RC car controlled using Swift Bluetooth App</p>
+                    <p>EGEN-310 RC car controlled using Swift Bluetooth App</p>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/1-LXaLg0wQo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <p> The repository for this project can be found <a href = "https://github.com/lpappas98/Egen_310_App"> here </a></p>
                     <br>
+
+                    <p>Stats-216 Project to determine which sport has the most toxic fanbase</p>
+                    <p> The repository for this project can be found <a href = "https://github.com/lpappas98/Stats216_Project"> here </a></p>
                     <h4>Personal Projects</h4>
   								</div>
   							</section>
