--- a/index.html
+++ b/index.html
@@ -148,14 +148,19 @@
   								<div class="container">
   									<h3>Projects</h3>
   									<h4>School Projects</h4>
-                    <h5>EGEN-310 RC car controlled using Swift Bluetooth App</h5>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/1-LXaLg0wQo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    <p> The repository for this project can be found <a href = "https://github.com/lpappas98/Egen_310_App" target = "_blank"> here </a></p>
-                    <br>
+                    <article>
+                      <h5>EGEN-310 RC car controlled using Swift Bluetooth App</h5>
+                      <iframe width="560" height="315" src="https://www.youtube.com/embed/1-LXaLg0wQo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                      <p> The repository for this project can be found <a href = "https://github.com/lpappas98/Egen_310_App" target = "_blank"> here </a></p>
+                      <br>
+                    </article>
 
-                    <h5>Stats-216 Project to determine which sport has the most toxic fanbase</h5>
-                    <p> The repository for this project can be found <a href = "https://github.com/lpappas98/Stats216_Project" target = "_blank"> here </a></p>
-                    <h4>Personal Projects</h4>
+                    <article>
+                      <h5>Stats-216 Project to determine which sport has the most toxic fanbase</h5>
+                      <p> The repository for this project can be found <a href = "https://github.com/lpappas98/Stats216_Project" target = "_blank"> here </a></p>
+                    </article>
+                      <h4>Personal Projects</h4>
+
   								</div>
   							</section>
 
