bugfixes and added avatar

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 		<title>Logan Pappas</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<!--[if lte IE 8]><script src="assests/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="main.css" />
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<!--[if lte IE 8]><link rel="stylesheet" href="assests/css/ie8.css" /><![endif]-->
 	</head>
 	<body>
 
@@ -45,9 +45,9 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="https://www.linkedin.com/in/logan-pappas-9a674a171/" class="fab fa-linkedin-in"><span class="label"></span></a></li>
-						<li><a href="https://github.com/lpappas98" class="fab fa-github"><span class="label"></span></a></li>
-						<li><a href="mailto:lpappas98@yahoo.com" class="fas fa-envelope-square"><span class="label"></span></a></li>
+						<li><a href="https://www.linkedin.com/in/logan-pappas-9a674a171/" target="_blank" class="fab fa-linkedin-in"><span class="label"></span></a></li>
+						<li><a href="https://github.com/lpappas98" target ="_blank" class="fab fa-github"><span class="label"></span></a></li>
+						<li><a href="mailto:lpappas98@yahoo.com" target ="_blank" class="fas fa-envelope-square"><span class="label"></span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -68,7 +68,7 @@
 									 </p>
 
 									<br>
-									<p> My resume can be found <a href = "files/Resume.pdf"> here </a> (Last updated: July 2020)</p>
+									<p> My resume can be found <a href = "files/Resume.pdf" target="_target"> here </a> (Last updated: July 2020)</p>
 
 
 									<br>
@@ -194,13 +194,13 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollzer.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
+			<script src="assests/js/jquery.min.js"></script>
+			<script src="assests/js/jquery.scrollzer.min.js"></script>
+			<script src="assests/js/jquery.scrolly.min.js"></script>
+			<script src="assests/js/skel.min.js"></script>
+			<script src="assests/js/util.js"></script>
+			<!--[if lte IE 8]><script src="assests/js/ie/respond.min.js"></script><![endif]-->
+			<script src="assests/js/main.js"></script>
 
 	</body>
 </html>
