index and css updates

--- a/index.html
+++ b/index.html
@@ -57,8 +57,6 @@
 
 				<!-- Main -->
 					<div id="main">
-
-						<!-- One -->
 							<section id="about">
 								<div class="container">
 									<header class="major">
@@ -133,9 +131,7 @@
                         Due to my success in sales and service that month I won a brand new Macbook Pro! After many weeks of training I also recieved Apples certification for servicing all of their mobile devices at the time, this certification was called ACIT.
                         For the rest of my time at Simply Mac I lead my store in sales, assisted customers daily with their service needs making sure they not only get their problems solved but learn new skills with thier Apple products so they can solve their own future issues, and also helped train and lead my store since we were without a manager for multiple months.
                         </p>
-
                         <br>
-
                       </div>
                     </article>
 
@@ -143,29 +139,47 @@
 								</div>
 							</section>
 
+
               <!-- Three -->
-  							<section id="Projects">
+  							<section id="experience">
   								<div class="container">
   									<h3>Projects</h3>
+                    <p> Below are some projects that I have completed throughout college and my personal life. My projects will be updated with projects I enjoy and am proud of. Any projects or work that I do will always be updated more frequently on my github so feel free to checkout my github <a href = "https://github.com/lpappas98/" target = "_blank"> here</a> </p>
 
   									<h4>School Projects</h4>
+                    <br>
+                    <div class="features">
                     <article>
-                      <iframe width="560" height="315" src="https://www.youtube.com/embed/1-LXaLg0wQo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                      <iframe width="420" height="236" src="https://www.youtube.com/embed/1-LXaLg0wQo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen > </iframe>
                       <div class="inner">
-                      <h5>EGEN-310 RC car controlled using Swift Bluetooth App</h5>
+                      <h5>RC car controlled using Swift Bluetooth App</h5>
+                      <p> In the fall of 2019 I took a general engineering class where multiple disciplines of engineering worked together to build a rc car designed and built completely by our team.</p>
+
+                      <p>My focus in this project was working directly with our teams electrical engineer and program an app to remotely control our car. I decided to use swift as my development platform because of my personal interest in IOS app development and the capabilities of swift as a whole.
+                        The first step of building the app was to setup the code to connect the app from my phone to the bluetooth low energy chip. Once the app made the successful bluetooth connection I started to work on the visuals for the app. I made a generic control screen. My largest problem with this project with my limited knowledge of swift and bluetooth control was to access the correct protocol for the chip.
+                        After many hours of trying to debug and access the correct protocol for the chip I found a helpful piece of code that was specifically made to connect to a bluetooth device and show each protocol for read/write. This allowed me to determine how to connect to the protocol I needed and correctly connect and control our car.</p>
                       <p> The repository for this project can be found <a href = "https://github.com/lpappas98/Egen_310_App" target = "_blank"> here </a></p>
                       <br>
                       </div>
                     </article>
 
                     <article>
+                      <a class="image"><img src="images/sports_toxicity.png" alt="" /></a>
                       <div class="inner">
-                      <h5>Stats-216 Project to determine which sport has the most toxic fanbase</h5>
+                      <h5>Comparing the toxicity between esports and traditional sports fanbases</h5>
+                      <p> During my Junior year I took a statistics class where my partner <a href = "https://www.linkedin.com/in/reese-pearsall-662084126/" target = "_blank"> Reese Pearsall </a> and I were tasked with going out and doing a study to determine what a group of people think.
+                        We decided to do something untraditional for this project due to the fact that most people in the class traditionally go out and ask people questions like "How many cups of coffee do you drink a day?" and we didn't find a study like that very interesting.
+                        Combining our knowledge of computer science and statistics we decided to take thousands of comments from multiple different sports and e-sports subreddits to determine which group had a more "toxic" fabbase. To determine which comments would be marked as "toxic" we made a list of words and phrases that were considered curse words.
+                        In the end after running multiple python scripts to retrieve the thousands of comments from each subreddit and determine which ones were toxic we had our final results.
+                        In the repository below you can find our results, slides from the presentation we gave in our class, and the paper we wrote explaining our process and the in-depth results.</p>
                       <p> The repository for this project can be found <a href = "https://github.com/lpappas98/Stats216_Project" target = "_blank"> here </a></p>
                       </div>
                     </article>
-                      <h4>Personal Projects</h4>
 
+                    <article>
+                      <h4>Personal Projects</h4>
+                      </article>
+                    </div>
   								</div>
   							</section>
 
