--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 									<header class="major">
 										<h3>About Me</h3>
 									</header>
-									<p>Hello! My name is Logan Pappas. I am a recent computer science graduate at Montana State University. I received  my B.S. in Computer Science from Montana State university in Summer 2020. I am currently looking to start my career and expand my knowledge in the software engineering industry. I am very interested in web and app development, specifically in IOS development.
+									<p>Hello! My name is Logan Pappas. I am a recent computer science graduate at Montana State University. I received  my B.S. in Computer Science from Montana State university in the Summer of 2020. I am currently looking to start my career and expand my knowledge in the software engineering industry. I am very interested in web and app development, specifically in IOS development.
 									 </p>
 
 									<br>
@@ -71,9 +71,9 @@
 
 									<br>
 									<p>
-                    I am originally born in Dallas, Texas but have moved around throughout the U.S. my entire life which has given me many great experiences and let me meet amazing people from all around.
-                    I have currently lived in Texas, Virginia, New York, and Montana. Over the past 6 years living in Montana I have learned to get out of my shell and enjoy the world arond me.
-                    I love to spend time outside with friends going on hikes, roadtrips, and camping! I currently love to workout at the gym and challenge my strength every day to see what new things I can accomplish.
+                    I was born in Dallas, Texas but have moved around the U.S. my entire life which has given me many great experiences and let me meet amazing people from all around.
+                    I have currently lived in Texas, Virginia, New York, and Montana. Over the past 6 years living in Montana I have learned to get out of my shell and enjoy the world around me.
+                    I love to spend time outside with friends going on hikes, roadtrips, and camping! I try to challenge myself every day by going to the gym to not only better my health but increase my strength and see what I can accomplish.
                     My largest athletic goal for 2020-2021 is to train and compete in an Ironman Triathalon!
 									</p>
 
@@ -86,7 +86,7 @@
 							<section id="experience">
 								<div class="container">
 									<h3>Experience</h3>
-									<p>In the past few years, I have gained valuable experience and skills through a variety of jobs in both Sales/Customer Service and software development. To learn more about these positions, please continue reading!</p>
+									<p>Over the past few years, I have gained valuable experience and skills through a variety of jobs in both Sales/Customer Service and software development. To learn more about these positions, please continue reading!</p>
 
 									<div class="features">
 
@@ -111,8 +111,8 @@
                         <p>
                         During most of my time in college I worked at Cellular Plus Verizon Wireless, One of the most successful verizon companies in the United states.
                         With my previous sales and customer service experience from Simply Mac and Best Buy I excelled at not only solving customers problems but providing them with knowledge to help solve their future problems as well.
-                        Providing them with the customer service they needed and selling them on the correct products they need to make their day to day lives easier I made lifelong customers for cellular Plus with customers coming back to specifically work with me.
-                        Every month I not only met my sales goals but exceeeded them and was typically one of the best performing reps in the store. When one of our stores hired a new employee I would help train them in not only the software and system side but in helping them with their sales pitches and interactions with customers as well.
+                        Providing them with the customer service they needed and selling them on the correct products to make their day to day lives easier. I made lifelong customers for Cellular Plus with customers coming back to specifically work with me.
+                        Every month I not only met my sales goals but exceeded them and was typically one of the best performing representatives in the store. When one of our stores hired a new employee I would help train them in not only the software and system side but in helping them with their sales pitches and interactions with customers as well.
                         </p>
 
                         <br>
