--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Logan Pappas</a></h1>
-					<p>Computer Science Graduate <br />
+					<p> Technical Product Owner<br />
+					Assurant <br/>
 					Montana State University <br />
-					Bozeman, Montana</p>
+					Nashville, TN</p>
 				</header>
 				<nav id="nav">
 					<ul>
@@ -62,19 +63,21 @@
 									<header class="major">
 										<h3>About Me</h3>
 									</header>
-									<p>Hello! My name is Logan Pappas. I am a recent computer science graduate at Montana State University. I received  my B.S. in Computer Science from Montana State university in the Summer of 2020. I am currently looking to start my career and expand my knowledge in the software engineering industry. I am very interested in web and app development, specifically in IOS development.
+									<p>Hello! I’m Logan Pappas.
+I’m a Technical Product Owner and former Software Engineer with a B.S. in Computer Science from Montana State University (Class of 2020). I spent two years at Assurant developing production-level applications used in warehouses around the globe, gaining deep experience in full-stack development and enterprise software systems.
+
+Currently, I lead the development and strategy of multiple large-scale software products, bridging the gap between technical teams and business stakeholders to deliver impactful solutions.
+
+Outside of work, I stay hands-on with code through personal projects. My most recent endeavor is building a mobile travel app that integrates social media data with AI-powered features to enhance trip planning and discovery.
 									 </p>
 
 									<br>
-									<p> My resume can be found <a href = "files/Resume.pdf" target="_target"> here </a> (Last updated: July 2020)</p>
+									<p> My resume can be found <a href = "files/Resume.pdf" target="_target"> here </a> (Last updated:)</p>
 
 
 									<br>
 									<p>
-                    I was born in Dallas, Texas but have moved around the U.S. my entire life which has given me many great experiences and let me meet amazing people from all around.
-                    I have currently lived in Texas, Virginia, New York, and Montana. Over the past 6 years living in Montana I have learned to get out of my shell and enjoy the world around me.
-                    I love to spend time outside with friends going on hikes, roadtrips, and camping! I try to challenge myself every day by going to the gym to not only better my health but increase my strength and see what I can accomplish.
-                    My largest athletic goal for 2020-2021 is to train and compete in an Ironman Triathalon!
+                    
 									</p>
 
 
@@ -89,7 +92,32 @@
 									<p>Over the past few years, I have gained valuable experience and skills through a variety of jobs in both Sales/Customer Service and software development. To learn more about these positions, please continue reading!</p>
 
 									<div class="features">
-
+										<article>
+  <a class="image"><img src="images/assurant-product-owner.jpg" alt="Assurant Technical Product Owner" /></a>
+  <div class="inner">
+    <h4>Technical Product Owner – Assurant</h4>
+    <p>
+      Currently, I serve as a Technical Product Owner at Assurant, managing the development and lifecycle of multiple large-scale software products. I act as the liaison between stakeholders and engineering teams, transforming business needs into actionable user stories and guiding products from concept to delivery.
+    </p>
+    <br>
+    <p>
+      This role has sharpened my skills in strategic planning, stakeholder communication, and team leadership—while keeping me deeply connected to the software development process.
+    </p>
+  </div>
+</article>
+<article>
+  <a class="image"><img src="images/assurant-engineer.jpg" alt="Assurant Software Engineer" /></a>
+  <div class="inner">
+    <h4>Software Engineer – Assurant</h4>
+    <p>
+      At Assurant, I spent two years as a Software Engineer where I designed and developed production-grade applications for global warehouse operations. I worked on both frontend and backend systems, contributing to internal tools that improved workflow efficiency and reliability across international logistics environments.
+    </p>
+    <br>
+    <p>
+      This role gave me hands-on experience with enterprise architecture, agile development practices, and cross-functional collaboration with QA and DevOps teams.
+    </p>
+  </div>
+</article>
 										<article>
 											<a class="image"><img src="images/techlink.jpg" alt="" /></a>
 											<div class="inner">
